--- a/assets/package.json
+++ b/assets/package.json
@@ -7,13 +7,15 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.1.0",
     "nprogress": "^0.2.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
     "postcss": "^8.2.1",
-    "postcss-loader": "^4.1.0"
+    "postcss-loader": "^4.1.0",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
