--- a/assets/package.json
+++ b/assets/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.2.1",
+    "alpinejs": "^2.8.0",
     "autoprefixer": "^10.1.0",
     "nprogress": "^0.2.0",
     "phoenix": "file:../deps/phoenix",
